@@ -23,6 +23,12 @@
 
 package de.unistuttgart.iaas.amyassist.amy.plugin.spotify;
 
+import java.io.IOException;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+
 import com.neovisionaries.i18n.CountryCode;
 import com.wrapper.spotify.enums.ModelObjectType;
 import com.wrapper.spotify.exceptions.SpotifyWebApiException;
@@ -30,144 +36,56 @@ import com.wrapper.spotify.model_objects.special.FeaturedPlaylists;
 import com.wrapper.spotify.model_objects.special.SearchResult;
 import com.wrapper.spotify.model_objects.specification.AlbumSimplified;
 import com.wrapper.spotify.model_objects.specification.Artist;
-import com.wrapper.spotify.model_objects.specification.ArtistSimplified;
-import com.wrapper.spotify.model_objects.specification.Playlist;
 import com.wrapper.spotify.model_objects.specification.PlaylistSimplified;
 import com.wrapper.spotify.model_objects.specification.Track;
 import com.wrapper.spotify.requests.data.browse.GetListOfFeaturedPlaylistsRequest;
 import com.wrapper.spotify.requests.data.search.SearchItemRequest;
 
-import java.io.IOException;
-import java.lang.reflect.Array;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.Iterator;
-
 /**
- * TODO: This class create search query to the spotify web api and parse the results in a String or in a Hashmap with different attributes 
+ * This class create search query to the spotify web api and parse the results
+ * in a String or in a Hashmap with different attributes
  * 
  * @author Lars Buttgereit
  */
 public class Search {
 	private Authorization auth;
-	public static final String TYPE_ARTIST = "artist";
-	public static final String TYPE_TRACK = "track";
-	public static final String TYPE_PLAYLIST = "playlist";
-	public static final String TYPE_ALBUM = "album";
-	public static final String ITEM_NAME = "name";
-	public static final String GENRE = "genre";
-	public static final String ARTIST_NAME = "artisName";
-	public static final String ITEM_URI = "uri";
-	public static final String ITEM_TYPE = "type";
 
 	public Search(Authorization auth) {
 		this.auth = auth;
 	}
 
 	/**
-	 * Start a Search in the Spotify library.
+	 * create a search query and output a list with search results
 	 * 
 	 * @param searchItem
 	 * @param type
 	 *            what is searched for (track, artist, album, playlist)
 	 * @param limit
 	 *            max length of the result list
-	 * @param spotifyApi
-	 * @return a array list of the result entrys. every entry has at 0 the uri
-	 *         of the item and at 1 a output String with information about the
-	 *         item and at 2 the type of the item. if no element found a empty
-	 *         list is returned
+	 * @return a list with search result entries. every entry has a Map with
+	 *         different attributes. e.g. artist, ... every entry has a uri to the
+	 *         song an the type (track, artist, album, palylist)
+	 * @throws IOException
+	 * @throws SpotifyWebApiException
 	 */
-	public ArrayList<String[]> SearchAnything(String searchItem, String type, int limit) {
+	public List<Map<String, String>> searchList(String searchItem, String type, int limit)
+			throws SpotifyWebApiException, IOException {
 		SearchResult searchResult = searchInSpotify(searchItem, type, limit);
-		return createSpeechList(searchResult, type);
+		return createMap(searchResult, type);
 	}
 
-	public ArrayList<String[]> createSpeechList(SearchResult searchResult, String type) {
-		ArrayList<String[]> resultList = new ArrayList<>();
+	public List<Map<String, String>> createMap(SearchResult searchResult, String type) {
+		List<Map<String, String>> resultList = new ArrayList<>();
 		if (searchResult != null) {
-			String[] entry;
-			String outputString;
 			switch (type.toLowerCase()) {
-			case "track":
-				for (int i = 0; i < searchResult.getTracks().getItems().length; i++) {
-					entry = new String[3];
-					// generate a string with track name and artists
-					outputString = "";
-					outputString = outputString + i + ". Track name is "
-							+ searchResult.getTracks().getItems()[i].getName() + " by ";
-					for (int j = 0; j < searchResult.getTracks().getItems()[i].getArtists().length - 1; j++) {
-						outputString = outputString + searchResult.getTracks().getItems()[i].getArtists()[j].getName()
-								+ " and ";
-					}
-					if (0 < searchResult.getTracks().getItems()[i].getArtists().length) {
-						outputString = outputString + searchResult.getTracks().getItems()[i]
-								.getArtists()[searchResult.getTracks().getItems()[i].getArtists().length - 1].getName();
-					}
-					entry[1] = outputString;
-					entry[0] = searchResult.getTracks().getItems()[i].getUri();
-					entry[2] = "track";
-					resultList.add(entry);
-				}
-				return resultList;
-			case "playlist":
-				for (int i = 0; i < searchResult.getPlaylists().getItems().length; i++) {
-					entry = new String[3];
-					// generate a string with playlist name and owner name
-					outputString = "";
-					outputString = outputString + i + ". Playlist name is "
-							+ searchResult.getPlaylists().getItems()[i].getName() + " created by ";
-					if (searchResult.getPlaylists().getItems()[i].getOwner().getDisplayName() != null) {
-						outputString = outputString
-								+ searchResult.getPlaylists().getItems()[i].getOwner().getDisplayName();
-					}
-					entry[1] = outputString;
-					entry[0] = searchResult.getPlaylists().getItems()[i].getUri();
-					entry[2] = "playlist";
-					resultList.add(entry);
-				}
-				return resultList;
-			case "artist":
-				for (int i = 0; i < searchResult.getArtists().getItems().length; i++) {
-					entry = new String[3];
-					// generate a string with artist name and genre
-					outputString = "";
-					outputString = outputString + i + ". Artist name is "
-							+ searchResult.getArtists().getItems()[i].getName() + " in the genre ";
-					for (int j = 0; j < searchResult.getArtists().getItems()[i].getGenres().length - 1; j++) {
-						outputString = outputString + searchResult.getArtists().getItems()[i].getGenres()[j] + " and ";
-					}
-					if (0 < searchResult.getArtists().getItems()[i].getGenres().length) {
-						outputString = outputString + searchResult.getArtists().getItems()[i]
-								.getGenres()[searchResult.getArtists().getItems()[i].getGenres().length - 1];
-					}
-					entry[1] = outputString;
-					entry[0] = searchResult.getArtists().getItems()[i].getUri();
-					entry[2] = "artist";
-					resultList.add(entry);
-				}
-				return resultList;
-			case "album":
-				for (int i = 0; i < searchResult.getAlbums().getItems().length; i++) {
-					entry = new String[3];
-					// generate a string with album name and artists
-					outputString = "";
-					outputString = outputString + i + ". Album name is "
-							+ searchResult.getAlbums().getItems()[i].getName() + " by ";
-					for (int j = 0; j < searchResult.getAlbums().getItems()[i].getArtists().length - 1; j++) {
-						outputString = outputString + searchResult.getAlbums().getItems()[i].getArtists()[j].getName()
-								+ " and ";
-					}
-					if (0 < searchResult.getAlbums().getItems()[i].getArtists().length) {
-						outputString = outputString + searchResult.getAlbums().getItems()[i]
-								.getArtists()[searchResult.getAlbums().getItems()[i].getArtists().length - 1].getName();
-					}
-					entry[1] = outputString;
-					entry[0] = searchResult.getAlbums().getItems()[i].getUri();
-					entry[2] = "album";
-					resultList.add(entry);
-				}
-				return resultList;
+			case SpotifyConstants.TYPE_TRACK:
+				return createTrackSearchResult(searchResult, type);
+			case SpotifyConstants.TYPE_PLAYLIST:
+				return createPlaylistSearchResult(searchResult, type);
+			case SpotifyConstants.TYPE_ARTIST:
+				return createArtistSearchResult(searchResult, type);
+			case SpotifyConstants.TYPE_ALBUM:
+				return createAlbumSearchResult(searchResult, type);
 			default:
 				break;
 
@@ -177,113 +95,131 @@ public class Search {
 	}
 
 	/**
-	 * create a search query and output a arraylist with search results
+	 * create a List with all SearchResults when the type is a track
 	 * 
-	 * @param searchItem
-	 * @param type
-	 *            what is searched for (track, artist, album, playlist)
-	 * @param limit
-	 *            max length of the result list
-	 * @return a array list with search result entries. every entry has a
-	 *         hashMap with different attributes. e.g. artist, ... every entry
-	 *         has a uri to the song an the type (track, artist, album,
-	 *         palylist)
+	 * @param searchResult
+	 * @return a list with search result entries. every entry has a Map with
+	 *         different attributes. e.g. artist, ... every entry has a uri to the
+	 *         song an the type track
 	 */
-	public ArrayList<HashMap<String, String>> searchList(String searchItem, String type, int limit) {
-
-		SearchResult searchResult = searchInSpotify(searchItem, type, limit);
-
-		return createHashMap(searchResult, type);
-	}
-
-	public ArrayList<HashMap<String, String>> createHashMap(SearchResult searchResult, String type) {
-		ArrayList<HashMap<String, String>> resultList = new ArrayList<>();
-		if (searchResult != null) {
-			HashMap<String, String> entry;
-			switch (type.toLowerCase()) {
-			case "track":
-				for (Track track : searchResult.getTracks().getItems()) {
-					entry = new HashMap<>();
-					if (track.getName() != null) {
-						entry.put(Search.ITEM_NAME, track.getName());
-					}
-					String artist_name = "";
-					for (int j = 0; j < track.getArtists().length - 1; j++) {
-						artist_name = artist_name + track.getArtists()[j].getName()
-								+ ", ";
-					}
-					if (0 < track.getArtists().length) {
-						artist_name = artist_name + track
-								.getArtists()[track.getArtists().length - 1].getName();
-					}
-					entry.put(Search.ARTIST_NAME, artist_name);
-					entry.put(Search.ITEM_URI, track.getUri());
-					entry.put(Search.ITEM_TYPE, Search.TYPE_TRACK);
-					resultList.add(entry);
+	private List<Map<String, String>> createTrackSearchResult(SearchResult searchResult, String type) {
+		HashMap<String, String> entry;
+		List<Map<String, String>> result = new ArrayList<>();
+		if (type.equals(SpotifyConstants.TYPE_TRACK)) {
+			for (Track track : searchResult.getTracks().getItems()) {
+				entry = new HashMap<>();
+				if (track.getName() != null) {
+					entry.put(SpotifyConstants.ITEM_NAME, track.getName());
 				}
-				return resultList;
-			case "playlist":
-				for (PlaylistSimplified playlist : searchResult.getPlaylists().getItems()) {
-					entry = new HashMap<>();
-					if (playlist.getName() != null) {
-						entry.put(Search.ITEM_NAME, playlist.getName());
-					}
-
-					if (playlist.getOwner().getDisplayName() != null) {
-						entry.put(Search.ARTIST_NAME,
-								playlist.getOwner().getDisplayName());
-					}
-					entry.put(Search.ITEM_URI, playlist.getUri());
-					entry.put(Search.ITEM_TYPE, Search.TYPE_PLAYLIST);
-					resultList.add(entry);
+				String artistName = "";
+				for (int j = 0; j < track.getArtists().length - 1; j++) {
+					artistName = artistName.concat(track.getArtists()[j].getName()).concat(", ");
 				}
-				return resultList;
-			case "artist":
-				for (Artist artist : searchResult.getArtists().getItems()) {
-					entry = new HashMap<>();
-					if (artist.getName() != null) {
-						entry.put(Search.ITEM_NAME, artist.getName());
-					}
-					String genre = "";
-					for (int j = 0; j < artist.getGenres().length - 1; j++) {
-						genre = genre + artist.getGenres()[j] + ", ";
-					}
-					if (0 < artist.getGenres().length) {
-						genre = genre + artist
-								.getGenres()[artist.getGenres().length - 1];
-					}
-					entry.put(Search.GENRE, genre);
-					entry.put(Search.ITEM_URI, artist.getUri());
-					entry.put(Search.ITEM_TYPE, Search.TYPE_ARTIST);
-					resultList.add(entry);
+				if (0 < track.getArtists().length) {
+					artistName = artistName.concat(track.getArtists()[track.getArtists().length - 1].getName());
 				}
-				return resultList;
-			case "album":
-				for (AlbumSimplified album : searchResult.getAlbums().getItems()) {
-					entry = new HashMap<>();
-					if (album.getName() != null) {
-						entry.put(Search.ITEM_NAME, album.getName());
-					}
-					String artists = "";
-					for (int j = 0; j < album.getArtists().length - 1; j++) {
-						artists = artists + album.getArtists()[j].getName() + ", ";
-					}
-					if (0 < album.getArtists().length) {
-						artists = artists + album
-								.getArtists()[album.getArtists().length - 1].getName();
-					}
-					entry.put(Search.ARTIST_NAME, artists);
-					entry.put(Search.ITEM_URI, album.getUri());
-					entry.put(Search.ITEM_TYPE, Search.TYPE_ALBUM);
-					resultList.add(entry);
-				}
-				return resultList;
-			default:
-				break;
-
+				entry.put(SpotifyConstants.ARTIST_NAME, artistName);
+				entry.put(SpotifyConstants.ITEM_URI, track.getUri());
+				entry.put(SpotifyConstants.ITEM_TYPE, SpotifyConstants.TYPE_TRACK);
+				result.add(entry);
 			}
 		}
-		return resultList;
+		return result;
+	}
+
+	/**
+	 * create a List with all SearchResults when the type is a album
+	 * 
+	 * @param searchResult
+	 * @return a list with search result entries. every entry has a Map with
+	 *         different attributes. e.g. artist, ... every entry has a uri to the
+	 *         song an the type album
+	 */
+	private List<Map<String, String>> createAlbumSearchResult(SearchResult searchResult, String type) {
+		HashMap<String, String> entry;
+		List<Map<String, String>> result = new ArrayList<>();
+		if (type.equals(SpotifyConstants.TYPE_ALBUM)) {
+			for (AlbumSimplified album : searchResult.getAlbums().getItems()) {
+				entry = new HashMap<>();
+				if (album.getName() != null) {
+					entry.put(SpotifyConstants.ITEM_NAME, album.getName());
+				}
+				String artists = "";
+				for (int j = 0; j < album.getArtists().length - 1; j++) {
+					artists = artists.concat(album.getArtists()[j].getName()).concat(", ");
+				}
+				if (0 < album.getArtists().length) {
+					artists = artists.concat(album.getArtists()[album.getArtists().length - 1].getName());
+				}
+				entry.put(SpotifyConstants.ARTIST_NAME, artists);
+				entry.put(SpotifyConstants.ITEM_URI, album.getUri());
+				entry.put(SpotifyConstants.ITEM_TYPE, SpotifyConstants.TYPE_ALBUM);
+				result.add(entry);
+			}
+		}
+		return result;
+	}
+
+	/**
+	 * create a List with all SearchResults when the type is a artist
+	 * 
+	 * @param searchResult
+	 * @return a list with search result entries. every entry has a Map with
+	 *         different attributes. e.g. artist, ... every entry has a uri to the
+	 *         song an the type artist
+	 */
+	private List<Map<String, String>> createArtistSearchResult(SearchResult searchResult, String type) {
+		HashMap<String, String> entry;
+		List<Map<String, String>> result = new ArrayList<>();
+		if (type.equals(SpotifyConstants.TYPE_ARTIST)) {
+			for (Artist artist : searchResult.getArtists().getItems()) {
+				entry = new HashMap<>();
+				if (artist.getName() != null) {
+					entry.put(SpotifyConstants.ITEM_NAME, artist.getName());
+				}
+				String genre = "";
+				for (int j = 0; j < artist.getGenres().length - 1; j++) {
+					genre = genre.concat(artist.getGenres()[j]).concat(", ");
+				}
+				if (0 < artist.getGenres().length) {
+					genre = genre.concat(artist.getGenres()[artist.getGenres().length - 1]);
+				}
+				entry.put(SpotifyConstants.GENRE, genre);
+				entry.put(SpotifyConstants.ITEM_URI, artist.getUri());
+				entry.put(SpotifyConstants.ITEM_TYPE, SpotifyConstants.TYPE_ARTIST);
+				result.add(entry);
+			}
+		}
+		return result;
+	}
+
+	/**
+	 * create a List with all SearchResults when the type is a playlist
+	 * 
+	 * @param searchResult
+	 * @return a list with search result entries. every entry has a Map with
+	 *         different attributes. e.g. artist, ... every entry has a uri to the
+	 *         song an the type playlist
+	 */
+	private List<Map<String, String>> createPlaylistSearchResult(SearchResult searchResult, String type) {
+		HashMap<String, String> entry;
+		List<Map<String, String>> result = new ArrayList<>();
+		if (type.equals(SpotifyConstants.TYPE_PLAYLIST)) {
+			for (PlaylistSimplified playlist : searchResult.getPlaylists().getItems()) {
+				entry = new HashMap<>();
+				if (playlist.getName() != null) {
+					entry.put(SpotifyConstants.ITEM_NAME, playlist.getName());
+				}
+
+				if (playlist.getOwner().getDisplayName() != null) {
+					entry.put(SpotifyConstants.ARTIST_NAME, playlist.getOwner().getDisplayName());
+				}
+				entry.put(SpotifyConstants.ITEM_URI, playlist.getUri());
+				entry.put(SpotifyConstants.ITEM_TYPE, SpotifyConstants.TYPE_PLAYLIST);
+				result.add(entry);
+			}
+		}
+		return result;
 	}
 
 	/**
@@ -296,18 +232,15 @@ public class Search {
 	 *            how many entry the result maximal have
 	 * @return a object of the type SearchResult from the spoitfy library
 	 */
-	private SearchResult searchInSpotify(String searchItem, String type, int limit) {
+	private SearchResult searchInSpotify(String searchItem, String type, int limit)
+			throws SpotifyWebApiException, IOException {
 		SearchResult searchResult;
 		if (typeCheck(type)) {
 			SearchItemRequest searchItemRequest = this.auth.getSpotifyApi().searchItem(searchItem, type.toLowerCase())
-					.limit(new Integer(limit)).offset(new Integer(0)).build();
-			try {
-				searchResult = searchItemRequest.execute();
-				return searchResult;
+					.limit(Integer.valueOf(limit)).offset(Integer.valueOf(0)).build();
+			searchResult = searchItemRequest.execute();
+			return searchResult;
 
-			} catch (SpotifyWebApiException | IOException e) {
-				System.out.println("Error: " + e.getMessage());
-			}
 		}
 		return null;
 	}
@@ -315,38 +248,35 @@ public class Search {
 	/**
 	 * this method get a list from 10 featured playlist back
 	 * 
-	 * @return a array list of the result entrys. every entry has at 0 the uri
-	 *         of the item and at 1 a output String with information about the
-	 *         item
+	 * @return a list with search result entries. every entry has a Map with
+	 *         different attributes. e.g. artist, ... every entry has a uri to the
+	 *         song an the type playlist
+	 * @throws IOException
+	 * @throws SpotifyWebApiException
 	 * 
 	 */
-	public ArrayList<String[]> getFeaturedPlaylists() {
-		ArrayList<String[]> resultList = new ArrayList<>();
+	public List<Map<String, String>> getFeaturedPlaylists() throws SpotifyWebApiException, IOException {
+		List<Map<String, String>> result = new ArrayList<>();
+		HashMap<String, String> entry;
 		GetListOfFeaturedPlaylistsRequest getListOfFeaturedPlaylistsRequest = this.auth.getSpotifyApi()
-				.getListOfFeaturedPlaylists().country(CountryCode.DE).limit(new Integer(10)).offset(new Integer(0))
-				.build();
-
-		try {
-			final FeaturedPlaylists featuredPlaylists = getListOfFeaturedPlaylistsRequest.execute();
-			String outputString;
-			for (int i = 0; i < featuredPlaylists.getPlaylists().getItems().length; i++) {
-				outputString = "";
-				String[] entry = new String[2];
-				outputString = outputString + i + ". Playlist name is "
-						+ featuredPlaylists.getPlaylists().getItems()[i].getName() + " created by ";
-				if (featuredPlaylists.getPlaylists().getItems()[i].getOwner().getDisplayName() != null) {
-					outputString = outputString
-							+ featuredPlaylists.getPlaylists().getItems()[i].getOwner().getDisplayName();
-				}
-				entry[0] = featuredPlaylists.getPlaylists().getItems()[i].getUri();
-				entry[1] = outputString;
-				resultList.add(entry);
+				.getListOfFeaturedPlaylists().country(CountryCode.DE).limit(Integer.valueOf(10))
+				.offset(Integer.valueOf(0)).build();
+		FeaturedPlaylists featuredPlaylists = getListOfFeaturedPlaylistsRequest.execute();
+		for (PlaylistSimplified playlist : featuredPlaylists.getPlaylists().getItems()) {
+			entry = new HashMap<>();
+			if (playlist.getName() != null) {
+				entry.put(SpotifyConstants.ITEM_NAME, playlist.getName());
 			}
-			return resultList;
-		} catch (IOException | SpotifyWebApiException e) {
-			System.out.println("Error: " + e.getMessage());
+
+			if (playlist.getOwner().getDisplayName() != null) {
+				entry.put(SpotifyConstants.ARTIST_NAME, playlist.getOwner().getDisplayName());
+			}
+			entry.put(SpotifyConstants.ITEM_URI, playlist.getUri());
+			entry.put(SpotifyConstants.ITEM_TYPE, SpotifyConstants.TYPE_PLAYLIST);
+			result.add(entry);
 		}
-		return null;
+
+		return result;
 	}
 
 	public static boolean typeCheck(String type) {
